--- a/Style/main_style.css
+++ b/Style/main_style.css
@@ -5,6 +5,10 @@ body {
     text-align: center;
 }
 
-.container {
+.carCanvas {
     background: darkgray;
+}
+
+.netCanvas {
+    background: black;
 }
